<resources>
    <string name="app_name">Trails</string>
    <string name="desc_logo">The best recommendation destination \n application for you</string>

    <string name="title_onboarding_1">Explore All Place</string>
    <string name="desc_onboarding_1">Discover a vast array of tourist attractions, \n accommodations, restaurants, and local activities across various destinations.</string>
    <string name="title_onboarding_2">Search Your Destination</string>
    <string name="desc_onboarding_2">Refine your exploration with customizable search filters based on price, location, and attraction type.</string>
    <string name="title_onboarding_3">AI Recommendations</string>
    <string name="desc_onboarding_3">Engage with the AI chat feature for broader and more precise recommendations tailored to your interests.</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="cd_image_onboarding">image onboarding</string>
    <string name="cd_logo_application">Logo Application</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="welcome_title">Welcome To Trails!</string>
    <string name="welcome_desc">Please login to your account or create new account to continue</string>
    <string name="picture_beach">picture beach</string>
    <string name="your_location">Your Location</string>
    <string name="location">Location Not Found</string>
    <string name="hello">Hello, Budi</string>
    <string name="home_title">Lets Explore New Experience With Us!</string>
    <string name="search_placeholder">Where do you want to go?</string>

    <string name="home_bottombar">Home</string>
    <string name="profile_bottombar">Profile</string>
    <string name="cd_ai_chat">Ketuk untuk ke AI Chat</string>

    <string name="info_logout">Are you sure you want to log out of this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="aichat_placeholder">Type Your Message Here…</string>
    <string name="aichat_title">Trails AI Mode</string>
    <string name="wishlist">Wishlist</string>
    <string name="logout">Logout</string>
    <string name="cd_detail">detail image destination</string>
    <string name="cd_close">close page</string>
    <string name="search_filter">Search Filter</string>
    <string name="cd_search_filter">search filter</string>
    <string name="popular_destination">Search Result</string>
    <string name="web_client_id">852171246469-d8chh8tev3jvsij2sg0a613rfefj6nb3.apps.googleusercontent.com</string>
    <string name="home_hello">Hello, %1$s</string>
    <string name="location_is_not_found_try_again">Location is not found. Try Again</string>
    <string name="go_to_maps">Go to maps</string>
    <string name="location_fragment">Location</string>
    <string name="cd_destination_image">destination image</string>
    <string name="description_fragment">Description</string>
    <string name="instruction_filter">You can personalize your search by choosing filters like rating, distance, type of place, or region. Once you\'ve set your preferences, simply apply the filters and search again. Happy exploring!</string>
    <string name="region_title">Region</string>
    <string name="region_place_label">Region Place</string>
    <string name="type_title">Type</string>
    <string name="type_place_label">Type Place</string>
    <string name="rating_title">Rating</string>
    <string name="range_rating_label">Range Rating</string>
    <string name="apply">Apply</string>
    <string name="empty_search">Sorry, I didn\'t find what you need. Let\'s try something else</string>
    <string name="userRatingTotal">(%1$s Review)</string>
    <string name="address_detail">%1$s, %2$s</string>
    <string name="home_popular_title">Popular Destination</string>
    <string name="home_nearby_title">Nearby</string>
    <string name="cd_nearby">nearby destination</string>
    <string name="loading_nearby">loading nearby destination</string>
    <string name="home_popular">popular destination</string>
    <string name="loading_popular_destination">loading popular destination</string>
    <string name="search_destination_placeholder">search destination</string>

    <string-array name="dropdown_ratings">
        <item>All Ranges</item>
        <item>4-5</item>
        <item>3-4</item>
        <item>2-3</item>
        <item>1-2</item>
        <item>0-1</item>
    </string-array>

    <string-array name="dropdown_types">
        <item>All Types</item>
        <item>tourist attraction</item>
        <item>restaurant</item>
        <item>lodging</item>
        <item>hospital</item>
        <item>bar</item>
        <item>cafe</item>
        <item>store</item>
    </string-array>

    <string-array name="dropdown_regions">
        <item>All Regions</item>
        <item>Candidasa</item>
        <item>Canggu</item>
        <item>Jimbaran</item>
        <item>Kuta</item>
        <item>Lovina</item>
        <item>Nusa Dua</item>
        <item>Sanur</item>
        <item>Seminyak</item>
        <item>Ubud</item>
        <item>Uluwatu</item>
    </string-array>

    <string name="your_location_bali">Bali, Indonesia</string>
    <string name="cd_favorite">favorite</string>
    <string name="title_favorites">My Favorites</string>
    <string name="empty_favorite">Apparently, you haven\'t found your favorite destination yet.</string>
    <string name="loading_aichat">Loading...</string>
    <string name="missing_aichat">Sorry, I didn\'t understand that. Can you please rephrase?</string>
    <string name="initial_aichat">Hi, welcome to Trails AI Model.\nTry things like:\n1. Find a restaurant in Uluwatu\n2. Cheap hotels in Seminyak\n3. Hotels near Seminyak in Kerobokan</string>
</resources>
